Style fix to align buttons correctly (only css)

--- a/packages/klevu-ui/src/components/klevu-product/klevu-product.css
+++ b/packages/klevu-ui/src/components/klevu-product/klevu-product.css
@@ -34,6 +34,13 @@
   flex-direction: column;
   max-width: var(--width);
 }
+.container.default,
+.container.small a {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  max-width: var(--width);
+}
 
 .container.default.fixedWidth {
   max-width: auto;
@@ -70,6 +77,7 @@
 .container.line a {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
 }
 
 .line .info {
@@ -113,9 +121,9 @@
   text-overflow: ellipsis;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
-  overflow: hidden;
   height: calc(var(--klevu-body-s-height) * var(--klevu-body-s-line-height) * 2);
   text-align: left;
+  margin-top: var(--klevu-spacing-04);
 }
 
 .brandname + .productname {
@@ -217,6 +225,7 @@
 
 klevu-button.addToCart {
   margin-top: var(--klevu-spacing-04);
+  white-space: nowrap;
 }
 
 .vatcaption {
